<resources>
    <string name="app_name">Go Beautify</string>
    <string name="app_version">Version :: 1.0.0</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="dashboard">Dashboard</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="name">Full Name</string>
    <string name="name_demo">User\'s full name</string>
    <string name="email">Email</string>
    <string name="email_demo">user@email.com</string>
    <string name="dob">Birth Date</string>
    <string name="dob_demo">15-7-1990</string>
    <string name="password">Password</string>
    <string name="password_demo">**********</string>
    <string name="update_info">Update Info</string>
    <string name="phone">Phone</string>
    <string name="phone_demo">0123456789</string>
    <string name="select">Select Image</string>
    <string name="feedback_caption">Your feedback powers our progress. Let us know your thoughts!</string>
    <string name="feedback_caption_1">Shape our app with your thoughts! Tell us what you think!</string>
    <string name="feedback_caption_3">Tell us, make us better!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message Body</string>
    <string name="spin">Select Title</string>
    <string name="send">Send Message</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_body">Notification body goes here. Notification body goes here. Notification body goes here.</string>
    <string name="chat">Chat</string>
    <string name="generator">Image Generator</string>

    <string-array name="feedback_type">
        <item>Select Title</item>
        <item>Feedback</item>
        <item>Suggestion</item>
        <item>Report a Bug</item>
    </string-array>
</resources>