<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"/>

<!--    <item-->
<!--        android:id="@+id/notifications"-->
<!--        android:title="@string/notification"-->
<!--        android:icon="@drawable/notification"/>-->

<!--    <item-->
<!--        android:id="@+id/feedback"-->
<!--        android:title="@string/feedback"-->
<!--        android:icon="@drawable/feedback"/>-->

<!--    <item-->
<!--        android:id="@+id/profile"-->
<!--        android:title="@string/profile"-->
<!--        android:icon="@drawable/user"/>-->

    <item
        android:id="@+id/chat"
        android:title="@string/chat"
        android:icon="@drawable/chat"/>

    <item
        android:id="@+id/generator"
        android:title="@string/generator"
        android:icon="@drawable/generator"/>

</menu>